Fix settings image alignment

--- a/components/Settings/SettingsHero.module.scss
+++ b/components/Settings/SettingsHero.module.scss
@@ -62,6 +62,8 @@
       }
     }
     p {
+      min-width: 90px;
+      text-align: center;
       margin-top: 10px;
       font-size: 16.5px;
       font-weight: 400;
